# logisight

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  DEMO_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOY_GCP_FREE.md  DRIVER_APP_SETUP.md  Dockerfile  FRONTEND_QUICK_START.md  README.md  alembic.ini  app_state.py  build.sh  config.py  database.py  firebase-service-account.json.template  gcp_config.yaml.template  limiter.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  scrape_console.js  seed_data.py  supply_chain.db-shm
agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
alembic/: env.py
driver-app-main/: .firebaserc  firebase.json  package-lock.json  package.json  vite.config.js
frontend/: .env.example  .env.production  cypress.config.js  firebase.json  index.html  package-lock.json  package.json  screenshot.mjs  vite.config.js
middleware/: api_key_auth.py  firebase_client.py
routes/: __init__.py  ai.py  client_auth.py  client_dashboard.py  client_upload.py  comparison.py  crud.py  driver.py  integration.py  logistics.py  rl.py  simulation.py
schemas/: __init__.py  ai.py  blockchain.py  client.py  core.py  driver.py  edge.py  facility.py  integration.py  inventory.py  logistics.py  multi_objective.py  news.py  objective.py  (+3 more)
(+180 files in other folders)
